  - #5888 Remove markedown plugins from distribution.
  - #5952 GetPageAliasFromID() Undefined variable "alias"
  - #5846 When Power Users edit page content, the aliases change
  - #5959 UserTagOperations::SetUserTag() does not set ID
  - #5971 Missing Image File in the default theme for CMSMS
  - #5996 {content_image} does not show in preview-tab
  - Caching - Important Change 
    Now pages marked as 'cachable' will be cachable in the browser for a time period as specified in the session.cache_expire PHP configration variable.
    Pages not marked as cachable, or those accessed via a POST request will not be cached.

Core Installer:
  - #4136 admin gui breaks when isntalling update over https
  - #4978 upgrade.32.to.33
  - 
  
FileManager:
  - #4046 Files too large won't upload
  - 

MenuManager:
  - #1761 Adding new template downloads moduleinterface.php
  - #2488 Apply and Submit does not work in certain scenario
  - #2503 Sectionheader is displayed as Link when is activeparent
  - #2489 $node->current missing in Help description
  - #3460 'items=' active page not working correctly
  - #3599 simple_menu not setting correct CSS selectors since 1.6
  - #3620 $node->image disapear in 1.6 version
  - #4089 "loadprops" doesn't work if "items" is set
  - #4186 Template error in simple_navigation.tpl causing invalid XHTML output
  - #4237 Menu Separators not generated since v1.6.x
  - #5447 Menu function childrenof breaks collapse
  -  
  
News:  
  - #5987 Field Definition - Public option
  - 
  
Printing:
  - #5209 Printing module causes fatal errors when used with gallery
  - 


Version 1.9.2 - Tevairoa
-----------------------------
Core:
  - #5585 Add Stylesheet Image links to addcontent.php
  - #5715 Fix content types dropdown stuff in addcontent, where FF didnt reload the page after content-type change.
  - #5766 deprecated message in editcss
  - Fix to GetAllContent, which caused the Hierarchy() error.
  - Fixes to menu-templates, in relation to SectionHeader.